#45, Abilities gap CSS - #45: Fix valid properties missing on initial load. - Tweak gap CSS on abilities to use more space when available.

--- a/styles/custom-dnd5e-character-sheet.css
+++ b/styles/custom-dnd5e-character-sheet.css
@@ -148,21 +148,35 @@
     display: flex;
     flex-direction: column-reverse;
     flex-wrap: wrap;
-    justify-content: space-around;
-    margin-left: unset;
+    justify-content: start;
+    margin: 0;
     padding: 0;
     padding-bottom: 0.25rem;
     width: unset;
+    gap: 0;
 }
 
-@container (min-width: 700px) {
-    .custom-dnd5e.dnd5e2.sheet.actor.character .ability-scores .rows {
-        align-content: space-evenly;
-        gap: 0rem;
-        justify-content: center;
-        margin: 0;
-        padding-top: 0rem;
-        width: unset;
+@container (width <= 500px) {
+    .custom-dnd5e.dnd5e2.sheet.actor.character .ability-scores .rows > div {
+        column-gap: 0.25rem;
+    }
+}
+
+@container (width > 500px) and (width <= 600px) {
+    .custom-dnd5e.dnd5e2.sheet.actor.character .ability-scores .rows > div {
+        column-gap: 1rem;
+    }
+}
+
+@container (width > 600px) and (width <= 800px) {
+    .custom-dnd5e.dnd5e2.sheet.actor.character .ability-scores .rows > div {
+        column-gap: 1.5rem;
+    }
+}
+
+@container (width > 800px) {
+    .custom-dnd5e.dnd5e2.sheet.actor.character .ability-scores .rows > div {
+        column-gap: 2rem;
     }
 }
 
@@ -170,9 +184,8 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     min-height: 0;
-    column-gap: 1rem;
-    row-gap: 0.75rem;
     flex-wrap: wrap;
+    row-gap: 0.75rem;
 }
 
 .custom-dnd5e.dnd5e2.sheet.actor.character .ability-scores .ability-score {
